[gd_scene load_steps=5 format=3 uid="uid://qupxmksewfro"]

[ext_resource type="Script" path="res://Level.gd" id="1_ffnbo"]
[ext_resource type="PackedScene" uid="uid://by6og1xwlbm4m" path="res://level_map.tscn" id="2_oaw2x"]
[ext_resource type="PackedScene" uid="uid://lkkoxx108aiy" path="res://player.tscn" id="3_tjojn"]
[ext_resource type="Script" path="res://Spawner.gd" id="4_01cdg"]

[node name="Level" type="Node2D" node_paths=PackedStringArray("n_player", "n_spawner")]
script = ExtResource("1_ffnbo")
n_player = NodePath("Player")
n_spawner = NodePath("Spawner")

[node name="LevelMap" parent="." instance=ExtResource("2_oaw2x")]

[node name="Player" parent="." instance=ExtResource("3_tjojn")]

[node name="Spawner" type="Node2D" parent="." node_paths=PackedStringArray("n_timer")]
script = ExtResource("4_01cdg")
n_timer = NodePath("Timer")

[node name="Timer" type="Timer" parent="Spawner"]
wait_time = 3.0
autostart = true

[node name="DifficultTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="game_over" from="Player" to="." method="_on_player_game_over"]
[connection signal="level_complete" from="Player" to="." method="_on_player_level_complete"]
[connection signal="timeout" from="Spawner/Timer" to="Spawner" method="_on_timer_timeout"]
[connection signal="timeout" from="DifficultTimer" to="." method="_on_difficult_timer_timeout"]
